Sun Dec 29 00:47:58 2002  Balachandran Natarajan  <bala@isis-server.isis.vanderbilt.edu>

	* bin/auto_run_tests.lst: Security tests using SSLIOP will not be
	  run in static builds.

Sat Dec 28 23:05:51 2002  Steve Huston  <shuston@riverace.com>

        * bin/make_release: Use -relative to replace ACE_ROOT with a relative
          path in generated makefiles.

Sat Dec 28 13:16:24 2002  Nanbor Wang  <nanbor@cs.wustl.edu>

	* ace/MEM_IO.cpp (recv_buf): Reverted my previous hack in:

	  Fri Dec 27 08:38:29 2002  Nanbor Wang  <nanbor@cs.wustl.edu>

	  and make the connection close handling more robust.

	* tests/MEM_Stream_Test.cpp: Reverted my previous change in:

	  Sat Dec 28 11:04:38 2002  Nanbor Wang  <nanbor@cs.wustl.edu>

	  It was not necessary.  Added debug information for close
	  connection.

Sat Dec 28 11:04:38 2002  Nanbor Wang  <nanbor@cs.wustl.edu>

	* tests/MEM_Stream_Test.cpp: Made sure this test ignore the EIO
	  error from the following change when a connection was closed.

	  Fri Dec 27 08:38:29 2002  Nanbor Wang  <nanbor@cs.wustl.edu>

Fri Dec 27 20:06:39 2002  Nanbor Wang  <nanbor@cs.wustl.edu>

	* ace/Malloc_T.h:
	* ace/Malloc_T.i:
	* ace/Malloc_T.cpp: Added a new ACE_Malloc_T::bad () method to
	  query whether a Malloc_T object was constructed successfully.
	  This approach, IMO, is sub-optimal compared to using an explicit
	  init method approach.  The existing constructor signatures,
	  however, prevent us from doing so without breaking backward
	  compatibility.

	* ace/MEM_SAP.cpp:  Now that there's a way to check whether the
	  underlying Malloc is functioning or not.  Changed MEM_SAP to
	  check for proper initialization of underlying Malloc object and
	  clean up OS resources if the Malloc object is defected.  This
	  change makes MEM_Stream transport mechanism more robust.

Fri Dec 27 19:46:31 2002  Steve Huston  <shuston@riverace.com>

        * ACEXML/apps/svcconf/Svcconf.cpp: Add a dummy entrypoint when