@@ -1645,7 +1645,7 @@ Petr Ferschmann <pferschmann@kerio.com>
 Greg Mulyar <greg_mu@yahoo.com>
 Max F. Bilyk <mbilyk@europe.com>
 Danile White <ygor@comcast.net>
-
+Andrew Marlow <apm35@student.open.ac.uk>
 
 I would particularly like to thank Paul Stephenson, who worked with me
 at Ericsson in the early 1990's.  Paul devised the recursive Makefile
